AER-3044 more project archive info in metadata (#295)
* Added more information to archive project
* Added roundtrip case for new archive project fields
Also fixed nullpointer in case XSD validation fails in roundtrip. Normally doesn't happen, but when developing it helps if it's not a nullpointer you're looking at.
* Adjusted conversion from/to gml objects to include new fields
Had to add some util classes and thrown exceptions for the centroid conversion.